restructure relation between classes (v2)